--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,7 @@ ext {
     pagingVersion = '3.0.0-alpha01'
     retrofitVersion = '2.7.2'
     okhttpLoggingInterceptorVersion = '4.0.0'
+    chuckerVersion = '3.2.0'
     coroutines = '1.3.6'
 
     runnerVersion = '1.3.0-rc01'
