--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
@@ -55,6 +56,7 @@ ext {
     pagingVersion = '3.0.0-alpha01'
     retrofitVersion = '2.7.2'
     okhttpLoggingInterceptorVersion = '4.0.0'
+    delayLoggerVersion = '0.0.2'
     chuckerVersion = '3.2.0'
     coroutines = '1.3.6'
 
